--- a/index.Rmd
+++ b/index.Rmd
@@ -13,6 +13,7 @@ output:
 ```{r, cache = FALSE}
 # In order to use these packages, we need to install flexdashboard, plotly, and Cairo.
 library(tidyverse)
+library(tidymodels)
 library(plotly)
 library(spotifyr)
 library(compmus)
@@ -39,7 +40,7 @@ I want to know if there are any real measurable differences in recordings under 
 
 ```{r}
 ornithology <- get_playlist_audio_features("1115668083", "3pMfdAOvErb9AEnAO9W2fa")
-ggplot(ornithology, aes(x=tempo, fill=track_name)) + geom_histogram(position='dodge', binwidth = 15)
+ggplot(ornithology, aes(x=tempo, fill=track_name)) + geom_histogram(position='dodge', binwidth = 15, alpha=0.7)
 
 ```
 
@@ -205,17 +206,93 @@ ggplotly(bztplot)
 ***
 In the chroma matrix we can indeed see vertical yellow lines in the same places as in Ornithology. Though it also seems to be that there is less imporovising in this recording (less yellow overall). In the Timbre matrix we see an interesting pattern. It seems like the recordings starts out with a clear(ish) theme, then does a lot of improvisation and ends with the theme again. The second time the theme is played, it is not a complete duplicate of the first time, it does still seem to have some nice improvisational quality to it. A structure like this seems very plausible to me in jazz. This however is not a structure we see in any of the other matrices (chroma and timbre) of this recording and the Ornithology recording. This might actually be one of the crucial differences between the two titles.
 
-### scatter energy valence
+### scatterplot energy v valence
 
 ```{r}
 ggplot(ornithology, aes(x=valence, y=energy, color=track_name, size=track_popularity)) + geom_point(alpha=0.6)
 ```
 
+
 ***
 From the previous similarity matrices, it is hard to make hard conclusions about what makes one recording be named so, and another different. So back to a more basic representation. On the left we see a scatterplot of valencee v energy, size is here the popularity. What we can see from this, is that for a large part, the songs overlap completely. Yet in the left bottom corner, with low energy and low valence we see only How high the moon recordings. Finnaly an aspect in which the titles really do differ. One might also argue that top left, or low valence high energy, is primarily occupied by Ornithology. Yet such an statement is not possible with the dataset we have. You would most likely need a much larger dataset is you would want to back up such a claim.
+Knowing however that there are some differences like that. We can try and see if we can use machine learning to create a classieifer which will identify a title, given a recording. Lets get to it. 
 
+### classification
+```{}
+orni <- ornithology %>% filter(track_name == 'Ornithology')
+hhtm <- ornithology %>% filter(track_name != 'Ornithology')
+standard <- 
+    orni %>% mutate(playlist = "Ornithology") %>% 
+    bind_rows(
+        hhtm %>% mutate(playlist = "hhtm")) %>% 
+    mutate(playlist = factor(playlist)) %>% 
+    mutate(
+        segments = 
+            map2(segments, key, compmus_c_transpose)) %>% 
+    mutate(
+        pitches = 
+            map(segments, 
+                compmus_summarise, pitches, 
+                method = 'mean', norm = 'manhattan'),
+        timbre =
+            map(
+                segments,
+                compmus_summarise, timbre,
+                method = 'mean')) %>% 
+    mutate(pitches = map(pitches, compmus_normalise, 'clr')) %>% 
+    mutate_at(vars(pitches, timbre), map, bind_rows) %>% 
+    unnest(pitches, timbre)
+```
 
-### Truck-driver modulations in the Year 2525 [tonal analysis]
+```{}
+indie_class <- 
+    recipe(playlist ~
+               danceability +
+               energy +
+               loudness +
+               speechiness +
+               acousticness +
+               instrumentalness +
+               liveness +
+               valence +
+               tempo +
+               duration_ms +
+               C + `C#|Db` + D + `D#|Eb` +
+               E + `F` + `F#|Gb` + G +
+               `G#|Ab` + A + `A#|Bb` + B +
+               c01 + c02 + c03 + c04 + c05 + c06 +
+               c07 + c08 + c09 + c10 + c11 + c12,
+           data = standard) %>% 
+    step_center(all_predictors()) %>%
+    step_scale(all_predictors()) %>%
+    # step_range(all_predictors()) %>% 
+    prep(standard) %>% 
+    juice
+```
+
+```{}
+standard_cv <- standard_class %>% vfold_cv(5)
+```
+
+```{}
+standard_knn <- nearest_neighbor(neighbors = 1) %>% set_engine('kknn')
+predict_knn <- function(split)
+    fit(standard_knn, playlist ~ ., data = analysis(split)) %>% 
+    predict(assessment(split), type = 'class') %>%
+    bind_cols(assessment(split))
+```
+
+```{}
+standard_cv %>% 
+    mutate(pred = map(splits, predict_knn)) %>% unnest(pred) %>% 
+    conf_mat(truth = playlist, estimate = .pred_class) %>% 
+    autoplot(type = 'heatmap')
+```
+
+***
+unfortunately, the functtion compmus_c_transpose does not seem to work for me. I have put my code here on the left, mostly for my own practicality ;)
+
+### Ornithology [tonal analysis]
 
 ```{r}
 circshift <- function(v, n) {if (n == 0) v else c(tail(v, n), head(v, -n))}
@@ -272,9 +349,11 @@ orniKey
 
 ***
     
-keygram for orni
+keygram for Ornithology. You can see quite well from this that the recording is in D, (which is correct). However, I know from playing this piece myself, that it modulates to different keys about every 5 seconds. Thanks Jazz. Apparently that is just a bit to hard for spotify to detect. Who can blame them.
 
-### Truck-driver modulations in the Year 2525 [tonal analysis]
+- further analysis needed
+
+### How high the moon [tonal analysis]
 
 ```{r}
 circshift <- function(v, n) {if (n == 0) v else c(tail(v, n), head(v, -n))}
@@ -332,4 +411,10 @@ hhtmKey
 ***
     
 keygram for hhtm
+
+Here once more the complexity from Jazz is found. By ear, I know this recording to be in D as well. Yet where the previous keygraph only showed D, this one shows - everything. Which might be in line with the fact that the standard modulates to a different key all the time. I would have liked to see this represented more acurately by time, and am not quite sure why we do not see this here.
+
+- further analysis needed
+
+
 
